--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <body>
     <script src="utils.js"></script>
     <script src="encryption.js"></script>
-    <script>
-    deserializePayload(`E/36gm1xclGgS/frDjzAM7J53ktoc7uo3Btt1b3hKTMleKWUcg8B6n9Hb+qN7jVM1XCqB8izfQkmgZvm6UKzjPQJmUILm+BGyzf1MNXi6qpWAAesCSd1UYLZwrbVW63a`);
-    </script>
+    <script src="wrapper.js"></script>
 </body>
 </html>
