--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <label for="user">Username</label>
     <input id="user" name="user" type="text"></input>
     <label for="pass">Password</label>
-    <input id="pass name="pass" type="text"></input>
+    <input id="pass" name="pass" type="text"></input>
     <button onclick="signin();">Submit</button>
 
     <script src="utils.js"></script>
@@ -21,7 +21,7 @@
         let user = document.getElementById("user");
         let pass = document.getElementById("pass");
 
-        student_login(user, pass);
+        student_login(user.value, pass.value);
       }
     </script>
 </body>
